--- a/package.json
+++ b/package.json
@@ -8,13 +8,6 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.268",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "esbuild": "^0.20.2",
-    "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "esbuild": "^0.20.2"
   }
 }
