feat: 愿景术语精炼与冗余代码清理
- 全局更新术语：'片段' -> '足迹'，'记下' -> '随笔/感悟'
- 更新项目功能说明文档，对齐个人知识记录愿景
- 删除冗余的 React 打包脚本 bundler.js
- 清理 Tailwind 配置及未使用的 esbuild 依赖
- 完成全量构建验证

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "watch": "bun run build.js --watch"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.268",
-    "esbuild": "^0.20.2"
+    "@types/chrome": "^0.0.268"
   }
 }
